--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -13,5 +13,6 @@
   },
   "scripts": {
     "dev": "parcel src/index.html -p 3000 --cache-dir ./.parcel-cache"
-  }
+  },
+  "gitHead": "b4b83763317213310ce198c4820f0639f12f04f4"
 }
